# Used_Car_Price_Prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  config.yaml  influential.csv  plan.txt  pyproject.toml  requirements.txt  run_deployment.py  run_pipeline.py  setup.py  test.csv  test.ipynb  test.py  training_pipeline.py
.github/workflows/: ci.yaml
config/: schema.yaml
data/processed/: X_test.csv  X_train.csv  test.csv  train.csv  y_test.csv  y_train.csv
models/: model.pkl
notebooks/: eda.ipynb  experiment.ipynb  test.py
src/: __init__.py  base.py  data_cleaning.py  encoder.py  feature_engineering.py  handle_missing.py  handle_outliers.py  model_builder.py  scaler.py  test.py
src.egg-info/: PKG-INFO  SOURCES.txt
src/components/: __init__.py  base.py  data_cleaning.py  data_ingestion.py  data_splitter.py  data_transformation.py  data_validation.py  encoder.py  evaluator.py  feature_engineering.py  handle_missing.py  handle_outliers.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/configuration/: azure_connection.py
src/constants/: __init__.py
src/data_access/: proj1_data.py
src/entity/: artifact_entity.py  azure_estimator.py  config_entity.py  estimator.py  s3_estimator.py
src/pipline/: deployment_pipeline.py  prediction_pipeline.py  (+1 more)
static/: style.css
steps/: build_model.py  clean_data.py  encode_categorical.py  evaluate.py  evaluate_model.py  feature_engineering.py  handle_missing.py  handle_outliers.py  ingest_data.py  log_transform.py  split_data.py  train_model.py  transform_data.py
templates/: index.html
(+8 files in other folders)
